Version 2.6.5
=======================
+ enhanced TV show and movie renamer (http://goo.gl/8pbkFj)
  IMPORTANT: REVIEW YOUR TV SHOW RENAMER SETTINGS!
  
+ DVD ordering of episodes (http://goo.gl/YBD5qJ)
+ write thumb url into the NFO for multi episode files
+ added h265 logo
+ (experimental) added Rotten Tomates scraper
+ added downloading of custom image-urls in the image chooser
x added some workarounds for failing TVDB searches
x proper handling of the watched state in the NFO
x catching some NFO parsing problems
x improved parsing of imdb plot
x fixed some minor issues with the command line version
x fixed Mac OSX startup script
x fixed some export template issues

Version 2.6.4 
=======================
+ changed Fanart.tv to v3 API (with clientKey)
+ added more artwork scraping dialogs
+ new Excel export template (xml)
+ added $L language renaming option
+ added/improved 3D handling
+ certification bulk edit
+ add season to image chooser title
+ remember last opened directory in the directory/file chooser
x fixed/improved some tooltips
x improved artwork sorting, better language detection
x fixed MacOS startup; Java detection, executable, ...
x fixed SSxEE TvShow parser
x fixed movie exporter filename generation
x many code cleanups 

Version 2.6.3
=======================
+ added edit button for tv show season
x fix physically deletion of movies in multiMovieDir
x updated Trakt.tv libs
x fix release build version info
x fix TMM updater in case of error download
x write additional NFO for DVD/BD folder
x tweak getting modified date from files (speedup)
x ignore backup folder when searching for missing movies 
x added more transifex languages
x improved some needed debug loggings
x and some more minor internal things... 

Version 2.6.2
=======================
+ added column for watched state to the movie table
+ added action to scrape episode metadata without thumbs
+ added quick creation of movie sets to the movie bulk editor